' Generated by UML Generator
' Encoded: ZL8zJyCm4DtzApocGewOCrGj824sHDWGmzKvqXFE9PmT96ZxtqbZfyt0aEtk-TsxZ-UD3o2XRvpodyGT23JQEl1-6uBGhW_uP5ikwHVrhTfJXTgIM8TAmSu70HiYNPTxw50VbDOtjj3thMjbY8qv0-DRDi6hCmHTvtx6D5iL-hkbIfsK8Wue7s0nCgFS_zJOzLK8k7QfyPGjQPMc_kf1KdMCbzU-OBLmoaT1v8NSyLPRZj9tGbMD3-YfvcS8mt4uAXm6smBPasw0E0EfVQ7BmJ2ktzvdaj4KOzR9aCkvZ3ckOwihbkSJBLrbHah8bN9PFi-F4pPRSuPkaAlXV_q1
' URL: http://www.plantuml.com/plantuml/uml/ZL8zJyCm4DtzApocGewOCrGj824sHDWGmzKvqXFE9PmT96ZxtqbZfyt0aEtk-TsxZ-UD3o2XRvpodyGT23JQEl1-6uBGhW_uP5ikwHVrhTfJXTgIM8TAmSu70HiYNPTxw50VbDOtjj3thMjbY8qv0-DRDi6hCmHTvtx6D5iL-hkbIfsK8Wue7s0nCgFS_zJOzLK8k7QfyPGjQPMc_kf1KdMCbzU-OBLmoaT1v8NSyLPRZj9tGbMD3-YfvcS8mt4uAXm6smBPasw0E0EfVQ7BmJ2ktzvdaj4KOzR9aCkvZ3ckOwihbkSJBLrbHah8bN9PFi-F4pPRSuPkaAlXV_q1
' Generated on: 2025-11-28T12:28:12.706414532

@startuml
skinparam classAttributeIconSize 0
hide circle

abstract class Shape {
  +c: Color
  --
  +Shape(c: Color)
  +applyColor(): void
}

interface Color {
  +applyColor(): void
}

class Triangle {
  +Triangle(c: Color)
  +applyColor(): void
}

class Square {
  +Square(c: Color)
  +applyColor(): void
}

class RedColor {
  +applyColor(): void
}

class GreenColor {
  +applyColor(): void
}

class ShapeAndColorBridgeDesignPattern {
  +{static} main(args: String[]): void
}

Shape --> Color
Triangle --|> Shape
Triangle ..> Color
Square --|> Shape
Square ..> Color
RedColor ..|> Color
GreenColor ..|> Color
@enduml